--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 }
 .logo-img{
     align-items: center;
-    margin-right:40px ;
+    margin-left:50px ;
 }
   /* for sign up and login dropdown */
 .signup-container {
@@ -116,15 +116,18 @@
     width: 580px;
 }
 .featured-box{
-    margin: 40px 80px;
+    flex-wrap: wrap;
+    margin: 60px 80px;
+    margin-bottom: 80px;
 }
 .ft-img{
     height: 200px;
     width: 200px;
+    object-fit: cover;
 }
 /* two buttons from home page */
 .buttons{
-    margin-left:500px ;
+    margin-left:420px ;
     margin-bottom: 40px;
 }
 /* For forms */
@@ -155,7 +158,9 @@
     font-weight: bold;
     margin-bottom: 10px;
   }
-  input[type="text"], input[type="email"], input[type="password"],input[type="file"],input[type="date"]{
+  input[type="text"], input[type="email"], input[type="password"],input[type="file"],input[type="date"]
+  .select
+  {
     width: 100%;
     height: 40px;
     border: 1px solid rgb(19, 11, 11);
@@ -163,4 +168,67 @@
     padding: 0 10px;
     font-size: 16px;
   }
+  input[type="date"]
+  {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgb(19, 11, 11);
+    border-radius: 5px;
+    padding: 0 10px;
+    font-size: 16px;
+  }
+  /* dashboard  */
+  .grid{
+    display: grid;
+  }
+  .grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0,1fr));
+  }
+  .col-span-3{
+    grid-column: span 3/ span 3;
+  }
+  .gap-4{
+    gap:1 rem;
+  }
+  
+/*  adding style to display profile name */
+.profile-name{
+  background-color: rgb(189, 128, 128);
+  text-transform: capitalize;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: #F8F6F1;
+}
+
+/* styling menu items */
+.menu-items{
+  background-color: white;
+  padding: 20px 50px;
+  margin-top: 0;
+  margin-right:50px ;
+  border-radius: 5px;
+  display: inline-block;
+}
+.menu-item{
+  font-size: 20px;
+  margin-bottom: 12px;
+}
+/* styling lawyer page */
+.lawyer-section{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 60px;
+  margin-left: 0px;
+}
+.lawyer-info{
+  margin-bottom: 30px;
+  font-size: 22px;
+}
+a:link{
+  text-decoration: none;
+}
+a:hover{
+  font-weight: bold;
+}
 
