--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@
     height: 200px;
     width: 200px;
     object-fit: cover;
+    border-radius: 4px;
 }
 /* two buttons from home page */
 .buttons{
@@ -256,7 +257,7 @@ a:hover{
   grid-template-rows:200px 200px ;
   /* gap: 20px; */
   row-gap: 150px;
-  column-gap:30px
+  column-gap:35px
 }
 /* form for booking appointments */
 .overlay {
