--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@
 
 .btn-green{
   background-color: rgb(2, 102, 2);
+  
 }
 /* HOME PAGE */
 /* margin-top-right-bottom-left */
@@ -92,8 +93,9 @@
 /* whole mid section of landing page */
 .main-section{
     margin-left: 150px;
-    margin-right: 120px;
+    margin-right: 100px;
     margin-bottom: 100px;
+    margin-top: 30px;
 }
 /* left part of hero image */
 .hero-section{
@@ -108,16 +110,18 @@
     font-family: 'Forum', display;
     text-align: center;
     font-size: 50px;
+    margin-top: 20px;
     margin-bottom:20px ;
 }
 .learn{
-    margin-top:40px ;
-    margin-left:85px ;
+    margin-top:60px ;
+    margin-left:100px ;
 }
 /* main image from home page */
 .hero-img{
     height: 500px;
     width: 580px;
+    border-radius: 4px;
 }
 .featured-box{
     flex-wrap: wrap;
@@ -284,6 +288,7 @@ textarea {
 
 .msg-form {
   position: relative;
+  padding: 0 30px;
 }
 
 .form-close-btn {
@@ -302,11 +307,26 @@ textarea {
   margin-top: 10px;
   background-color: #4CAF50;
   color: white;
-  padding: 10px;
+  padding: 15px;
   text-align: center;
   display: none;
   position: absolute;
   top: 0;
   left: 50%;
   border-radius: 3px;
+  font-weight: bold;
+  }
+.failed-message {
+  margin-top: 10px;
+  background-color:red;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  border-radius: 3px;
+  font-weight: bold;
+
   }
