--- a/style.css
+++ b/style.css
@@ -328,5 +328,31 @@ textarea {
   left: 50%;
   border-radius: 3px;
   font-weight: bold;
+}
+.table-container {
+  margin: 20px auto;
+  margin-left: 100px;
+  /* width: 80%; */
+}
 
-  }
+.table-container table {
+  /* width: 80%; */
+  border-collapse: collapse;
+  border: 1px solid #ddd;
+}
+
+.table-container th,
+.table-container td {
+  padding: 15px;
+  text-align: left;
+  border: 1px solid #ddd;
+}
+
+.table-container th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+}
+
+.table-container tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
